# InvestingRecommender

./: .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  ENV_SETUP.md  LOCAL_DB_SETUP.md  README.md  REDIS_SETUP.md  SETUP_LOCAL_DB.sh  START_DB.md  START_SERVICES.md  create_db.py  docker-compose.yml  pyproject.toml  start_redis.sh
backend/: .env.example  API_KEYS.md  API_TESTS.md  Dockerfile  INSTALL.md  LOCAL_DEVELOPMENT.md  PROJECT_SUMMARY.md  README.md  check_redis.sh  docker-compose.yml  download_nltk_data.py  pyproject.toml  run_api.sh  run_celery_beat.sh  run_celery_worker.sh  run_migrations.sh  start_all.sh  test_api.sh
backend/alembic/: env.py
backend/alembic/versions/: 2161b33631f0_indexes_uniques.py  93fdb8891020_init.py  cf017868b888_init.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: assets.py  health.py  ingest.py  portfolio.py  recommend.py  signals.py  universe.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  asset.py  portfolio.py  (+3 more)
backend/app/schemas/: asset.py  common.py  portfolio.py  recommendation.py  signal.py
backend/tests/: test_health.py  test_recommend_smoke.py
invest-angular/: README.md  angular.json  package-lock.json  package.json
invest-angular/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.spec.ts  app.ts
invest-angular/src/environments/: environment.development.ts  environment.ts
scripts/: check_universe_build.sh  run_recos.py  start_universe_build.sh
(+27 files in other folders)
