[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-invest-recommender"
version = "0.1.0"
description = "AI-driven investment recommender FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0",
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "cvxpy>=1.5",
    "redis>=5.0",
    "celery[redis]>=5.4",
    "tenacity>=9.0",
    "rapidfuzz>=3.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "tqdm>=4.66",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis",
]

[tool.setuptools]
packages = ["backend.app"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "C90"]

[tool.ruff.isort]
known-first-party = ["backend.app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

